[workspace]
members = [
    "days/day_1",
    "days/day_2",
    "days/day_3",
    "days/day_4",
    "days/day_5",
    "days/day_6",
    "days/day_7",
    "days/day_8",
    "days/day_9",
    "days/day_10",
    "days/day_11",
    "days/day_12",
    "days/day_13",
    "days/day_14",
    "days/day_15",
    "days/day_16",
    "days/day_17",
    "days/day_18",
    "days/day_19",
    "days/day_20",
    "days/day_21",
    "days/day_22",
    "days/day_23",
    "days/day_24",
    "days/day_25"
]

default-members = [
    "days/day_1",
    "days/day_2",
    "days/day_3",
    "days/day_4",
    "days/day_5",
    "days/day_6",
    "days/day_7",
    "days/day_8",
    "days/day_9",
    "days/day_10",
    "days/day_11",
    "days/day_12",
    "days/day_13",
    "days/day_14",
    "days/day_15",
    "days/day_16",
    "days/day_17",
    "days/day_18",
    "days/day_19",
    "days/day_20",
    "days/day_21",
    "days/day_22",
    "days/day_23",
    "days/day_24",
    "days/day_25"
]